--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -12,8 +12,11 @@
   },
   "dependencies": {
     "@start-jr/assets": "workspace:*",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.563.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
