Update lockfile with new dependencies (helmet, swagger-ui-express, yamljs, typescript, ts-node, @types/node)

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -25,16 +25,22 @@
     "drizzle-orm": "^0.45.1",
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
-    "pg": "^8.18.0"
+    "pg": "^8.18.0",
+    "swagger-ui-express": "^5.0.1",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
+    "@types/helmet": "^0.0.48",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.11",
     "@types/pg": "^8.16.0",
+    "@types/swagger-ui-express": "^4.1.8",
+    "@types/yamljs": "^0.2.34",
     "drizzle-kit": "^0.31.8",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
