Updated dashboard UI with colours and admin dashboard

--- a/apps/dashboard/tsconfig.app.json
+++ b/apps/dashboard/tsconfig.app.json
@@ -16,6 +16,12 @@
     "noEmit": true,
     "jsx": "react-jsx",
 
+    /* Path aliases */
+    "baseUrl": ".",
+    "paths": {
+      "@start-jr/assets": ["../../packages/assets/src"]
+    },
+
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
